# agentic-design-patterns

./: .env copy  01.Reflection.ipynb  02.Tools.ipynb  Makefile  README.md  pyproject.toml  reflection-app-draft.ipynb
llama3/: serve.py
utils/: download_from_hf.py
