[tool.poetry]
name = "Agentic Desings"
version = "0.1.0"
description = "Simple Agentic Desing Examples"
authors = ["jjovalle99 <jj.ovalle@uniandes.edu.co>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "~3.11"
langchain = "^0.1.16"
langchain-openai = "^0.1.3"
langgraph = "^0.0.37"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"
python-dotenv = "^1.0.1"
pygraphviz = "^1.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120